tests/semantic/load_record_invalid_parenthesis/load_record_invalid_parenthesis.err
Error loading data: Error converting <[121, -213> in column 1 in line 1; cannot parse fact file I.facts!

