tests/semantic/load_record_invalid_parenthesis/load_record_invalid_parenthesis.dl
// Souffle - A Datalog Compiler
// Copyright (c) 2020, The Souffle Developers. All rights reserved
// Licensed under the Universal Permissive License v 1.0 as shown at:
// - https://opensource.org/licenses/UPL
// - <souffle root>/licenses/SOUFFLE-UPL.txt

// Test invalid input (unbalanced parenthesis)


.type Tuple = [f: number, s: number, t: number]


.decl I(t: Tuple)
.input I

.decl O(t: Tuple)
O(t) :- I(t).

.output O
